--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 legacy-peer-deps=true
 strict-ssl=false
-registry=https://registry.npmjs.org/ 
+registry=https://registry.npmjs.org/
+optional=true 
