--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   },
   "engines": {
     "node": ">=18.0.0",
